S3-feat: Added login info to db, basic frontend wth login functionality
